@@ -1,15 +1,8 @@
-DIST QtCurve-KDE4-0.59.3.tar.bz2 104678 RMD160 182edcc31157ef44c7efb459d77d1929b079072e SHA1 91983b62fe0ba8588e71214b522bec56223236d6 SHA256 1040441d84f126e53989fb82290ebe1f0d841c05d8405a71f2ff9331370fb51b
 DIST QtCurve-KDE4-0.59.6.tar.bz2 105358 RMD160 acc810f45f9cbfa247954a0debff69304ae3eb10 SHA1 448f21b18f25e43f568c473bdb365c56a6b8df89 SHA256 621dada9e13d417f74a2c389234c4e3a9eef40dacbc1d8eb7ac0ba317387cc37
-DIST QtCurve-KDE4-0.60.0.tar.bz2 111661 RMD160 525f169438dddc27d090f3d5ba7af2ccd982e850 SHA1 9dd7090884d75e8bc2562095c54fcc728253f04a SHA256 153cb3a3965894d41db9032e52c43759bf7d2a7544de32c4562fac40af08a8bd
-DIST QtCurve-KDE4-0.61.1.tar.bz2 115685 RMD160 5222606717f625589d1ea27c614ec93469dd1ce5 SHA1 da389397824575b8631d354097a0bfb2d9464811 SHA256 d37e5d3d507a6b70592ecbb43a7f715a007507853702e527d88f9d5436c8ebe2
-DIST QtCurve-KDE4-0.61.2.tar.bz2 115924 RMD160 a95381f52105121b655d166b202c4237338492e0 SHA1 8c4cd57deb1e0f6a042dac63f7bff1fdf9b5eaa6 SHA256 6ca1ff17bd86e74c898a57be867bf74cfc470aa9972a62b94e1c02c6b2ea8e13
 DIST QtCurve-KDE4-0.61.4.tar.bz2 116100 RMD160 c7229a9f94d43c1f7ade77497580a06fcb96f70a SHA1 60900329de6ddc01111d0716a069f526a8e247bb SHA256 9fd0cbd38df10e51b8385aa61151969b05c36222caa66931ffa159ad2218be27
-EBUILD qtcurve-qt4-0.59.3-r1.ebuild 903 RMD160 cc347d116ee41a1085e54d1acf8f3ace45d66c4c SHA1 25111c3d9d55a3eaaf2de7c3f3264e49b8f0f793 SHA256 933e4820803436a21d787a55b240fdc37789672342ffd769fcc619b8d3733ff4
-EBUILD qtcurve-qt4-0.59.6-r1.ebuild 1108 RMD160 5cb1397e358e9141e779766c79e130d68c4b2405 SHA1 fcde74201bcdced9863ad0e75c4d45deaf16b003 SHA256 78462eb0261a1ead67d1925fb046210005021a8981016007064a2e0a7e049d6a
+DIST QtCurve-KDE4-0.62.0.tar.bz2 117016 RMD160 83d7f9ff78fda10edd3f2a723218fb66ab1b7e75 SHA1 8670e4ad1fb934a9a9fbeff934f0ba0d9cfed9d4 SHA256 adf1856dd32b9dac21de70104a164db8011c9787a1537090e728a0851d42decd
 EBUILD qtcurve-qt4-0.59.6.ebuild 906 RMD160 7802c2f6c3714bc1dcf0779911a236937d2b2137 SHA1 f7e6dc3b09e7ca952200188f18a0412ceff8a572 SHA256 bd55fa7a4348cacc75bdc0529b2712ad940b311202db182a40c74ff84a7a17a5
-EBUILD qtcurve-qt4-0.60.0.ebuild 971 RMD160 91e1431937294a2edf1b7cc69e385cd6881acda9 SHA1 727a3c30d70dceea76fd3367b12354d150c3f022 SHA256 2cbc14aab216d0ce6cc6fd59ab25460648b06d4180ea2e9a33d42a1734804003
-EBUILD qtcurve-qt4-0.61.1.ebuild 971 RMD160 ba61864df7b94d623c9f946ad4f6fd6df6117bf9 SHA1 356987ac3683e0647c887ad7d3e9537518d93334 SHA256 d92c2efeb4a15eff6b44c5b8a76a002976f5faf2648cf3da1976a5501ede9a72
-EBUILD qtcurve-qt4-0.61.2.ebuild 1077 RMD160 c3fe9ed751ae839d30a13a7987072c68434efd5d SHA1 96e0c13bd6055c2633e827e00cc04936a8f93a33 SHA256 d0f233e93fc7ca1e313e5bdbc287880ebecdc12af533eeb0307d615911f8adb4
 EBUILD qtcurve-qt4-0.61.4.ebuild 1155 RMD160 8047e72e00e47a1056b19a970074503edb0bcfd3 SHA1 928c0b71e91a3ea42a821adb6828273ed71079c3 SHA256 3d6c07c1f596249ecfa64d030bc61a4600fc0dfac0a5f771bc4117ac4d797b86
-MISC ChangeLog 8895 RMD160 194f2dc7e642150ea34eef8e4354ec703661161e SHA1 aba21e2dafe83e91aa289a2d1064ace51f7c545a SHA256 817f01c4fef99d250f46c58dbe65df4c9376e0883c75c1ec2e952e77140812eb
+EBUILD qtcurve-qt4-0.62.0.ebuild 1103 RMD160 0192cf0b61232eddab40a3a9f2e23277a554e736 SHA1 170cdf61a2713fe194b5afe06a68a115c9926ae7 SHA256 ac112ffd9cfa0ed71afa05c2d1e6a31e5db026a45e80b9922fa397a748abd7ce
+MISC ChangeLog 9262 RMD160 bc4b691fd8b28d482ed0e581b0dc3979bb1181fc SHA1 ed2717c12597b1b7c454fed883a728008705380a SHA256 1d638603fb1acb0f4c82aac44efab57de4b55064b622788bd4e302d8b8785017
 MISC metadata.xml 408 RMD160 d14e2e25aad4cb4eb93661caf199a8c1eccc48c2 SHA1 aee2e1f5d8ab8bddfa6eaaa7516cf92ced698c81 SHA256 5d88cffd9d81f495104cdea9a4036e448d06c35387ef9c034cd009ba2639db3d
