@@ -1,18 +1,10 @@
 DIST QtCurve-KDE3-0.59.2.tar.bz2 100886 RMD160 7b5059f9dfc0ff7ff27948ef3bc01cf33c48c5e6 SHA1 0c2af91b54704103fba9c136a6f1cdcb94238a50 SHA256 61cefb74d81493f2217d6f7742b24e6ecd2d0fcab664b60879be69da5422fb9d
-DIST QtCurve-KDE3-0.59.3.tar.bz2 100811 RMD160 9980b68932dfb80804630152c938ab4f03b3be2f SHA1 17426cd4bd1dddb6676a8cf2aa2330eb36d3d2f2 SHA256 d7a0f89a3040456daaffef5ed4234c148b415c003265d24c32f7f3c02f7dac76
-DIST QtCurve-KDE3-0.59.4.tar.bz2 100844 RMD160 08bd79d817b048aa290a24c75519d534a6967a4f SHA1 98858281d9b1a7722476fcb77e5cbcd1fb5ef57a SHA256 c1745e95cada4e3d305c91d0a3307c8199f3518e8705ad217753dcdfb3e0e1fc
 DIST QtCurve-KDE3-0.59.5.tar.bz2 100939 RMD160 cd08504608a3a73a4534a9821a95fa128df2f4e5 SHA1 a875cc448af8dae461887f2ac5edd89ad8ad3ace SHA256 d05d3fe510502516e552a56d63fafc95bc8df1e45353f351f40a2837215bac7f
-DIST QtCurve-KDE3-0.60.0.tar.bz2 103107 RMD160 9e36dd9f455c256f1a76a999f61a95f4d53c3b9b SHA1 6cedd5a1416d99ec17f8340207af0bedc3bab87a SHA256 042322a6c38074b3de65e286f284105245482a8794cf9cd9a965b1843260d39b
-DIST QtCurve-KDE3-0.61.1.tar.bz2 103890 RMD160 af19a6bb380a6f8fb0a338418a72b74d6120e3bd SHA1 c89b9cfd2a6ddf031e8caf767f0486fc1af5e12c SHA256 6d84f45bb08404cf8d5184ee2e42eb296fc0ba63e88cd626fe0f6bf2b7df2bc9
-DIST QtCurve-KDE3-0.61.2.tar.bz2 103966 RMD160 fe7420a4582bf95c95ff6b553c6c37d4206b9c29 SHA1 675ced2e67cf8f9731c68fee84320d14c65f6571 SHA256 1c02f6fd01b3ff7696f014a509be176924d4e037e1dc8ec6808b396b8095b1ae
 DIST QtCurve-KDE3-0.61.4.tar.bz2 103952 RMD160 b9fea8e4029da9939dadb2dc5304cfe3375734e1 SHA1 52ddb2afff9433b09b983792e5f7e09b06ce45f3 SHA256 e44c0ac4218a66ba7de3347f6ac35fd4b895e10a500b3a348cb817a3d2ae7738
+DIST QtCurve-KDE3-0.62.0.tar.bz2 104104 RMD160 7b815f81a4682853236a2f90a0fef063f7171822 SHA1 efce42a02ba4c9cef1d565d4363c1664073bfc32 SHA256 faf4b32a7af3b2548b855abf841046ef574f6aef597b5b9c37a8bcdede4b6d5c
 EBUILD qtcurve-0.59.2.ebuild 853 RMD160 7f2828f0aae9d8f6e96ef639c396c2684e9d2088 SHA1 ae37f3bfb0d24d0206270f6494227c5c45a60452 SHA256 51d0bce8b77d22f00899dd14c86b4d6ab8b00a637450faabc0f01f2d92520269
-EBUILD qtcurve-0.59.3.ebuild 860 RMD160 d3af0fd71b61deec53be092ba67c14ee182e9b53 SHA1 88b84214a65da8ee7529a364c4f49bb6ca0a2c5b SHA256 46b259bde9abb36e463cf4ef86d9460b4c604d5a3a6abfb28449f50e4d0f019d
-EBUILD qtcurve-0.59.4.ebuild 860 RMD160 e845fc9b5e587f27fb48068f3c76c48b6391d90a SHA1 510878f6f116fda86a81459292d492013adc3d51 SHA256 6f2b388956892516be2e08c4660af50bf01f75aa54a919ee664348c4e7f6386e
 EBUILD qtcurve-0.59.5.ebuild 859 RMD160 af481c355ccd5a54b5b291224c9b483203ffc189 SHA1 a306888a9d8a0ef6b147af5af0a0879d19efe7b4 SHA256 0a4eaf1d83c7d9cbef326be4b80f5bf8cfebb50717928d33f5f74db2a9c9a1b7
-EBUILD qtcurve-0.60.0.ebuild 865 RMD160 ad05030e13fd9cfa1870d636ebfa94e2703d505d SHA1 a0ade28746b8373840638db83bc4af853e651ea4 SHA256 8c1bfc3fc4c504a6730ebc380bfaa1a82f0683b0208c266d2122d0c6045554c4
-EBUILD qtcurve-0.61.1.ebuild 865 RMD160 7e88de67311b6e79e8bc3c093c2e23840f11b912 SHA1 2375370222c99e8a4ce1d44e32eb9f1909008bdd SHA256 67a23acd968e42b2c7016dae76e79fe791d89e60bfcf6685bdb82b8688432b34
-EBUILD qtcurve-0.61.2.ebuild 865 RMD160 2ec81f390c9e530405b32c2af38df3982fbd6d7b SHA1 4124b281ce158451c7586aaab326bb1fc9334356 SHA256 5419321e61f44d064c5320c00d3011fb8484e72f94600dc684d57aa0d4776ecb
 EBUILD qtcurve-0.61.4.ebuild 865 RMD160 e68a5a8a7d241f87e6dc89b58872eb3c7ca59b2e SHA1 9f77a7ef323ecdadee1e19619f9a157710a824d2 SHA256 8c215bd41f65152d5b66d248eb2e2d907abcb531ec11d3fb14c76fbaff9add81
-MISC ChangeLog 6516 RMD160 a6a2a298936d377e2b6563b5c4dfa58d57554322 SHA1 e8a799ece497aef6fa246bdf7dabad1370955af2 SHA256 56477b75dba84dd1813f4fe85e9c1ef0d6218c11bbff199c4f598e92082baa61
+EBUILD qtcurve-0.62.0.ebuild 865 RMD160 9424c670c674400e063828dabd8a719bd586bf0d SHA1 bb1d6ffb71d2c3c9e7cda89a550710be272a3681 SHA256 f27196472e0598fec615d4238fa3594d10afb24bba1b06e9d3dbd4fe9dc76421
+MISC ChangeLog 6782 RMD160 1f83dd7f815522f34a3afdb2b08206ee2cb201b4 SHA1 95971347ad035737d07714762af2b5bb308ef4e3 SHA256 fc576bc82da72e3510348fd881464b99bd5566b798df480c6252447d56c36a20
 MISC metadata.xml 265 RMD160 d03285bfab732286bde355fe0ec756e0cb88a6dd SHA1 93226e7e58879e1dd0200d6df5f8ad8d0143def1 SHA256 0aa5b2b231654873313aba9afebdb90a273b222741c4787d9386973af3c1d575
